--- a/classDetails.html
+++ b/classDetails.html
@@ -2,11 +2,14 @@
 <html>
 <head>
     <title>Teacher</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="teach_style.css" rel="stylesheet">
     <script src="teacher.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body onload="LoadClasses()">
+  <a id="sign-out-link" href = "#">Sign Out</a>
+  <h1 id="University-name">ACME University</h1>
+  <p id="welcome-text">Welcome Dr [Professor Name]</p>
     <div class="courseinfo">
         <table id="courseinfo"> 
           <thead>
