--- a/classSignUp.html
+++ b/classSignUp.html
@@ -3,7 +3,7 @@
 <head>
     <title>Student</title>
     <link href="stud_style.css" rel="stylesheet">
-    <script src="student.js" defer></script>
+    <script src="classSignUp.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body onload="getClasses()">
@@ -14,17 +14,18 @@
       <a id="sign-out-link" href = "#">Sign Out</a>
     <h1 id="University-name">ACME University</h1>
     <p id="welcome-text">Welcome [Student Name]</p>
-    <div class="student_table">
-        <table id="student_table"> 
+    <div class="signip_table">
+        <table id="signip_table"> 
           <thead>
             <tr>
               <th>Course Name</th>
               <th>Teacher</th>
               <th>Time</th>
               <th>Students Enrolled</th>
+              <th>Add class</th>
             </tr>
           </thead>
-          <tbody id="student_body">
+          <tbody id="signup_body">
   
           </tbody>
         </table>
