--- a/teacher.html
+++ b/teacher.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Teacher</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="teach_style.css" rel="stylesheet">
     <script src="teacher.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
